--- a/style.css
+++ b/style.css
@@ -1,20 +1,22 @@
+/* 
+    Colors
+    Yellow: #FFBE00
+    Navy: #192B37
+*/
+
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
-/* Temporary styles for structural html */
-
-*{
-    padding: .5rem;
-    border: 1px solid rgb(225,225,225);
-}
-
-body { border: none; }
-html { border: none; }
-
 /* Image Styles */
+
+body { 
+    
+    font-family: Catamaran, sans-serif;
+    color: #192B37;
+}
 
 .bg-image{
     background-image: url(/assets/sleep1-sheet.jpg);
@@ -25,9 +27,117 @@ html { border: none; }
 /* Universal styles & utility classes */
 
 .padded { padding: 5% }
-.padded-sm { padding: 1rem }    
+.padded-sm { padding: 1rem }
+.padded-lg { padding: 10% }    
 
 .bg-dark {
     background-color: #192B37;
     color: white;
+}
+
+.tall-50 { min-height: 50vh }
+.tall-60 { min-height: 60vh }
+.tall-70 { min-height: 70vh }
+.tall-80 { min-height: 80vh }
+.tall-90 { min-height: 90vh }
+.tall-100 { min-height: 100vh }
+
+
+/* Typography styles */
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
+a:hover {
+    color: #FFBE00;
+}
+
+h2{
+    font-size: 2.5rem;
+    line-height: 1.1;
+    margin-bottom: 1rem;
+}
+
+p{
+    font-weight: 200;
+    line-height: 1.4;
+    margin-bottom: 1rem;
+}
+
+p:last-child {
+    margin-bottom: 0;
+}
+
+.featured-text { color: #FFBE00; }
+.white-text { color: white; }
+
+.small-text { font-size: 1.5rem; }
+.medium-text { 
+    font-size: 2rem;
+    line-height: 1.1; 
+}
+.big-text { font-size: 4.5rem; }
+
+.fontweight-normal { font-weight: normal; }
+.fontweight-light { font-weight: 200; }
+.fontweight-extra-bold { font-weight: 800}
+
+.text-left      { text-align: left; }
+.text-center    { text-align: center; }
+.text-right     { text-align: right; }
+
+.subtitle {
+    font-size: 1.2rem;
+    color: rgb(120,120,125);
+    text-align: center;
+}
+
+.quote-icon {
+    font-size: 6rem;
+    display: inline-block;
+    color: rgb(120,120,125);
+    line-height: 1;
+}
+
+
+
+/* header styles */
+
+header {
+    background-image: url(/assets/sleep1-sheet.jpg);
+    background-size: cover;
+    background-position: center;
+}
+
+header h3 {
+    font-size: 5.5rem;
+    line-height: 1;
+}
+
+h3 {
+    line-height: 1;
+}
+
+
+/* Background Images */
+
+.bg-pillow{
+    background-image: url(assets/sleep3-pillow.jpg);
+    background-position: 70% 50%;
+}
+.bg-bed { background-image: url(assets/sleep2-lamp.jpg)}
+.bg-pug { 
+    background-image: url(assets/sleep4-pug.jpg);
+background-position: 50% 35%;
+}
+
+
+/* Icon Grid */
+.fas {
+    display: block;
+    margin-bottom: 2rem;
+    font-size: 3rem;
+    text-align: center;
 }
